Bug 534612 - clipPath references with clipPath elements do not work correctly. r=roc