layout/svg/base/src/nsSVGClipPathFrame.cpp
@@ -40,6 +40,7 @@
 #include "nsSVGClipPathFrame.h"
 #include "nsGkAtoms.h"
 #include "nsSVGUtils.h"
+#include "nsSVGEffects.h"
 #include "nsSVGClipPathElement.h"
 #include "gfxContext.h"
 #include "nsSVGMatrix.h"
@@ -69,7 +70,7 @@ nsSVGClipPathFrame::ClipPaint(nsSVGRenderState* aContext,
   }
   AutoClipPathReferencer clipRef(this);
 
-  mClipParent = aParent,
+  mClipParent = aParent;
   mClipParentMatrix = NS_NewSVGMatrix(aMatrix);
 
   PRBool isTrivial = IsTrivial();
@@ -78,6 +79,23 @@ nsSVGClipPathFrame::ClipPaint(nsSVGRenderState* aContext,
                            isTrivial ? nsSVGRenderState::CLIP
                                      : nsSVGRenderState::CLIP_MASK);
 
+
+  gfxContext *gfx = aContext->GetGfxContext();
+
+  PRBool isOK = PR_TRUE;
+  nsSVGClipPathFrame *clipPathFrame =
+    nsSVGEffects::GetEffectProperties(this).GetClipPathFrame(&isOK);
+  PRBool referencedClipIsTrivial;
+  if (clipPathFrame) {
+    referencedClipIsTrivial = clipPathFrame->IsTrivial();
+    gfx->Save();
+    if (referencedClipIsTrivial) {
+      clipPathFrame->ClipPaint(aContext, aParent, aMatrix);
+    } else {
+      gfx->PushGroup(gfxASurface::CONTENT_ALPHA);
+    }
+  }
+
   for (nsIFrame* kid = mFrames.FirstChild(); kid;
        kid = kid->GetNextSibling()) {
     nsISVGChildFrame* SVGFrame = do_QueryFrame(kid);
@@ -85,13 +103,64 @@ nsSVGClipPathFrame::ClipPaint(nsSVGRenderState* aContext,
       // The CTM of each frame referencing us can be different.
       SVGFrame->NotifySVGChanged(nsISVGChildFrame::SUPPRESS_INVALIDATION | 
                                  nsISVGChildFrame::TRANSFORM_CHANGED);
+
+      PRBool isOK = PR_TRUE;
+      nsSVGClipPathFrame *clipPathFrame =
+        nsSVGEffects::GetEffectProperties(kid).GetClipPathFrame(&isOK);
+
+      PRBool isTrivial;
+
+      if (clipPathFrame) {
+        isTrivial = clipPathFrame->IsTrivial();
+        gfx->Save();
+        if (isTrivial) {
+          clipPathFrame->ClipPaint(aContext, aParent, aMatrix);
+        } else {
+          gfx->PushGroup(gfxASurface::CONTENT_ALPHA);
+        }
+      }
+
       SVGFrame->PaintSVG(aContext, nsnull);
+
+      if (clipPathFrame) {
+        if (!isTrivial) {
+          gfx->PopGroupToSource();
+
+          nsRefPtr<gfxPattern> clipMaskSurface;
+          gfx->PushGroup(gfxASurface::CONTENT_ALPHA);
+
+          clipPathFrame->ClipPaint(aContext, aParent, aMatrix);
+          clipMaskSurface = gfx->PopGroup();
+
+          if (clipMaskSurface) {
+            gfx->Mask(clipMaskSurface);
+          }
+        }
+        gfx->Restore();
+      }
     }
   }
 
+  if (clipPathFrame) {
+    if (!referencedClipIsTrivial) {
+      gfx->PopGroupToSource();
+
+      nsRefPtr<gfxPattern> clipMaskSurface;
+      gfx->PushGroup(gfxASurface::CONTENT_ALPHA);
+
+      clipPathFrame->ClipPaint(aContext, aParent, aMatrix);
+      clipMaskSurface = gfx->PopGroup();
+
+      if (clipMaskSurface) {
+        gfx->Mask(clipMaskSurface);
+      }
+    }
+    gfx->Restore();
+  }
+
   if (isTrivial) {
-    aContext->GetGfxContext()->Clip();
-    aContext->GetGfxContext()->NewPath();
+    gfx->Clip();
+    gfx->NewPath();
   }
 
   return NS_OK;
@@ -111,8 +180,14 @@ nsSVGClipPathFrame::ClipHitTest(nsIFrame* aParent,
   }
   AutoClipPathReferencer clipRef(this);
 
-  mClipParent = aParent,
+  mClipParent = aParent;
   mClipParentMatrix = NS_NewSVGMatrix(aMatrix);
+
+  PRBool isOK = PR_TRUE;
+  nsSVGClipPathFrame *clipPathFrame =
+    nsSVGEffects::GetEffectProperties(this).GetClipPathFrame(&isOK);
+  if (clipPathFrame && !clipPathFrame->ClipHitTest(aParent, aMatrix, aPoint))
+    return PR_FALSE;
 
   for (nsIFrame* kid = mFrames.FirstChild(); kid;
        kid = kid->GetNextSibling()) {
@@ -133,6 +208,11 @@ nsSVGClipPathFrame::ClipHitTest(nsIFrame* aParent,
 PRBool
 nsSVGClipPathFrame::IsTrivial()
 {
+  // If the clip path is clipped then it's non-trivial
+  PRBool isOK = PR_TRUE;
+  if (nsSVGEffects::GetEffectProperties(this).GetClipPathFrame(&isOK))
+    return PR_FALSE;
+
   PRBool foundChild = PR_FALSE;
 
   for (nsIFrame* kid = mFrames.FirstChild(); kid;
@@ -143,6 +223,11 @@ nsSVGClipPathFrame::IsTrivial()
       // either more than one svg child and/or a svg container
       if (foundChild || svgChild->IsDisplayContainer())
         return PR_FALSE;
+
+      // or where the child is itself clipped
+      if (nsSVGEffects::GetEffectProperties(kid).GetClipPathFrame(&isOK))
+        return PR_FALSE;
+
       foundChild = PR_TRUE;
     }
   }
